codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 210
expression: terminal_title_popup_snapshot(&mut chat)
---
  Configure Terminal Title
  Select which items to display in the terminal title.

  Type to search
  >
› [x] thread-title   Current thread title (omitted when unavailable)
  [x] git-branch     Current Git branch (omitted when unavailable)
  [x] task-progress  Latest task progress from update_plan (omitted until available)
  [ ] app-name       Codex Router app name
  [ ] project-name   Project name (falls back to current directory name)
  [ ] current-dir    Current working directory
  [ ] spinner        Animated task spinner (omitted while idle or when animations are off)
  [ ] run-state      Compact session run-state text (Ready, Working, Thinking)

  thread title | feat/awesome-feature | Tasks 0/0
  Use ↑↓ to navigate, ←→ to move, space to select, enter to confirm, esc to cancel.
